<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Nome"
        android:textSize="40dp"
        android:id="@+id/textView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Corso"
        android:textSize="20dp"
        android:layout_weight="8"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Anno"
        android:layout_weight="0"
        android:layout_gravity="end"/>
    </LinearLayout>
    <TextView
        android:id="@+id/numero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NUMERO"
        android:paddingTop="10dp"
        android:textSize="50dp"
        />
    <TextView
        android:id="@+id/indirizzo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Via"
        android:paddingTop="15dp"
        android:textSize="25dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">
        <Button
            android:id="@+id/Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:textColor="@color/colorPrimary" android:text="Share"/>
    <Button
        android:id="@+id/Go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:textColor="@color/colorPrimary"
        android:text="@string/Muoviti" />

    <Button
        android:id="@+id/Call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:textColor="@color/colorPrimary"
        android:text="@string/Chiama"/>
    </LinearLayout>
</LinearLayout>